Production Beta Test 20 december

--- a/src/main/webapp/app/entities/contacts/contacts.html
+++ b/src/main/webapp/app/entities/contacts/contacts.html
@@ -41,6 +41,7 @@
 
     <div class="table-responsive">
         <table class="jh-table table table-striped">
+           <!-- <table class="table table-fixed-head" data-table-fixed-head-trigger="0" data-table-fixed-head-top="0">-->
             <thead>
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                 <th></th>
