--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -147,6 +147,8 @@
 	<script
 		src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 
+    <script src="bower_components/Bootstrap-Compatible-Sticky-Table-Header-Plugin-Table-Fixed-Head/src/jquery.michiweber.table-head-fixed.js"></script>
+
 	<!-- endbower -->
 	<!-- endbuild -->
 
@@ -245,6 +247,10 @@ Latest compiled and minified JavaScript
 
 	<script src="app/entities/work-order/work-order-audit.controller.js"></script>
 	<script src="app/entities/work-order/work-order-included-comp.controller.js"></script>
+	<script src="app/entities/work-order/multiple-workorder-reports.controller.js"></script>
+
+
+
 	<script src="app/entities/storage-servers/storage-servers.state.js"></script>
 	<script src="app/entities/storage-servers/storage-servers.service.js"></script>
 	<script
@@ -295,6 +301,7 @@ Latest compiled and minified JavaScript
 	<script src="app/entities/projects/pro.controller.js"></script>
 	<script src="app/entities/projects/pro.service.js"></script>
 	<script src="app/entities/projects/projects-template.controller.js"></script>
+	<script src="app/entities/projects/projects-similar-add.controller.js"></script>
 	<script src="app/entities/projects/projects-multiple.controller.js"></script>
 	<script src="app/entities/projects/projects-dialog.controller.js"></script>
 	<script src="app/entities/projects/projects-detail.controller.js"></script>
